Refactor. Module User
