# src/modules/user/dtos/create-user.dto.ts
@@ -1,12 +1,20 @@
 import { z } from 'nestjs-zod/z';
 import { createZodDto } from 'nestjs-zod';
 
-import { stringSchema, emailStringSchema } from 'src/shared/schemas.shared';
+import {
+  stringSchema,
+  emailStringSchema,
+  numberInStringSchema,
+} from 'src/shared/schemas.shared';
+
+import { TypesUserEnum } from '../enum';
 
 export const createUserSchema = z.object({
   user_name: stringSchema.max(255),
   user_email: emailStringSchema,
   password: stringSchema,
+  phone_number: numberInStringSchema.optional(),
+  type_user: z.nativeEnum(TypesUserEnum).optional(),
 });
 
 export type CreateUserPayload = z.infer<typeof createUserSchema>;
@@ -27,4 +35,14 @@ export class CreateUserDTO extends createZodDto(createUserSchema) {
    *@example pauloSalvatore@gmail.com
    */
   user_email: string;
+  /**
+   *Cell Phone of the user.
+   *@example 34991324255
+   */
+  phone_number?: string;
+  /**
+   *Type of the user.
+   *@example ADMIN | COMMOM | COMPANY
+   */
+  type_user?: TypesUserEnum;
 }
