# src/modules/user/dtos/update-user.to.ts
@@ -2,15 +2,20 @@ import { z } from 'nestjs-zod/z';
 import { createZodDto } from 'nestjs-zod';
 
 import {
+  numberInStringSchema,
   optionalEmailStringSchema,
   optionalStringSchema,
 } from 'src/shared/schemas.shared';
+
+import { TypesUserEnum } from '../enum';
 
 export const updateUserSchema = z.object({
   user_email: optionalEmailStringSchema,
   user_name: optionalStringSchema,
   previous_password: optionalStringSchema,
   new_password: optionalStringSchema,
+  phone_number: numberInStringSchema,
+  type_user: z.nativeEnum(TypesUserEnum).optional(),
 });
 
 export type UpdateUserType = z.infer<typeof updateUserSchema>;
@@ -27,13 +32,23 @@ export class UpdateUserDTO extends createZodDto(updateUserSchema) {
    */
   user_email?: string;
   /**
-   *Email of the user.
+   *Current password of the user.
    *@example 909090
    */
   previous_password?: string;
   /**
-   *Email of the user.
+   *New password of the user.
    *@example 909090
    */
   new_password?: string;
+   /**
+   *Cell Phone of the user.
+   *@example 34991324255
+   */
+   phone_number?: string;
+   /**
+    *Type of the user.
+    *@example ADMIN | COMMOM | COMPANY
+    */
+   type_user?: TypesUserEnum;
 }
